base/productivity/paperless/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: productivity
  labels:
    app.kubernetes.io/name: paperless
    app.kubernetes.io/part-of: homelab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: paperless
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-db
  namespace: productivity
  labels:
    app.kubernetes.io/name: paperless-db
    app.kubernetes.io/part-of: homelab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: paperless-db
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
